plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'//    id 'org.jetbrains.kotlin.jvm' version '1.6.0-RC'
    id 'org.beryx.jlink' version '2.25.0'
//    id 'org.sqlite'
}

group 'com.scholarly.utme'
version '1.0-SNAPSHOT'



repositories {
    mavenCentral()
    google()

    maven {
        url "https://sandec.jfrog.io/artifactory/repo"
    }
}

ext {
    junitVersion = '5.9.2'
}

sourceCompatibility = '16'
targetCompatibility = '16'

project.ext.buildDate = new Date()
project.version = "0.3"

application {
    mainModule = 'com.scholarly.utme'
    mainClass = 'com.scholarly.utme.MainApplication'
}

javafx {
    version = '18.0.2'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing']
}

mainClassName = "$moduleName/com.scholarly.utme.MainApplication"

run {
    jvmArgs = ['-Djdk.gtk.version=2']
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
//    modules = ['java.naming', 'java.xml', 'java.compiler', 'javafx.base']
//    addModules = ['com.scholarly.utme']
    launcher {
        name = 'Scholarly Jamb CBT'
        jvmArgs = ['-Djdk.gtk.version=2']
//        noConsole = true
    }

    jpackage {
        installerOptions = [
                '--description', "Scholarly Jamb CBT App",
                '--copyright', 'Copyrigth 2020-2024 Scholarly Educational Software Ltd'
        ]

        def currentOs = org.gradle.internal.os.OperatingSystem.current()
        def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
        imageOptions += ['--icon', "src/main/resources/drawable/app_logo.$imgType"]
        installerOptions += ['--resource-dir', "src/main/resources"]
        installerOptions += ['--vendor', 'Scholarly Tech']

        if(currentOs.windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
        } else if (currentOs.linux) {
            installerOptions += ['--linux-package-name', 'scholarly','--linux-shortcut']
        } else if (currentOs.macOsX) {
            installerOptions += ['--mac-package-name', 'scholarly']
        }

        /*installerType = project.findProperty('installerType')
        if (installerType == 'msi') {
            imageOptions += ['--icon', 'src/main/resources/drawable/app_logo.png']
            installerOptions += [
                    '--win-per-user-install', '--win-dir-chooser',
                    '--win-menu', '--win-shortcut'
            ]
        }
        if (installerType == 'pkg') {
            imageOptions += ['--icon', 'src/main/resources/pdfdecorator/gui/icon.icns']
        }
        if (installerType in ['deb', 'rpm']) {
            imageOptions += ['--icon', 'src/main/resources/pdfdecorator/gui/icon_256x256.png']
            installerOptions += [
                    '--linux-menu-group', 'Office',
                    '--linux-shortcut'
            ]
        }
        if (installerType == 'deb') {
            installerOptions += [
                    '--linux-deb-maintainer', 'office@walczak.it'
            ]
        }
        if (installerType == 'rpm') {
            installerOptions += [
                    '--linux-rpm-license-type', 'GPLv3'
            ]
        }*/
    }

    mergedModule {

    }
}

jpackage {
    doFirst {
        project.getProperty('installerType')
    }
}

tasks.withType(JavaCompile) {
    configure(options) {
        options.compilerArgs.add("-XDignore.symbol.file=true")
        options.fork = true
        options.forkOptions.executable = 'javac'
        options.encoding = 'utf-8'
    }
}

/*packagingOptions {
    exclude 'META-INF/LICENSE-LGPL-2.1.txt'
    exclude 'META-INF/LICENSE-LGPL-3.txt'
    exclude 'META-INF/LICENSE-W3C-TEST'
    exclude 'META-INF/DEPENDENCIES'
}*/

dependencies {
    implementation('org.controlsfx:controlsfx:11.1.2') {
        exclude group: 'org.openjfx'
    }
    implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
        exclude group: 'org.openjfx'
    }
    implementation('net.synedra:validatorfx:0.4.0') {
        exclude(group: 'org.openjfx')
    }
    implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1') {
        exclude group: 'org.openjfx'
    }
    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0') {
        exclude group: 'org.openjfx'
    }
    implementation ('com.jidesoft:jidefx-fields:0.9.1-b128') {
        exclude group: 'org.openjfx'
    }
    /*implementation('eu.hansolo:tilesfx:16.0.3') {
        exclude group: 'org.openjfx'
    }*/

    implementation('org.xerial:sqlite-jdbc:3.36.0.2') {
        exclude group: 'org.sqlite'
    }

    implementation 'org.openjfx:javafx-controls:16'

    implementation 'org.openjfx:javafx-swing:18.0.2'

    // SQL connector
//    implementation 'io.github.willena:sqlite-jdbc:3.35.5.3'

    // RxJava
    implementation 'io.reactivex.rxjava3:rxjava:3.1.6'

    //RxJavaFx
    implementation 'org.pdfsam.rxjava3:rxjavafx:3.0.2'

    // mvvmfx
    implementation 'de.saxsys:mvvmfx:1.8.0'

    // Text-to-Speech
    implementation 'net.sf.sociaal:freetts:1.2.2'

    // Gson
    implementation 'com.google.code.gson:gson:2.10.1'

    // Common Collections by Apache
    implementation 'org.apache.commons:commons-collections4:4.4'

    // Apache Commons Lang
    implementation 'org.apache.commons:commons-lang3:3.12.0'

    // OKHttp
    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'

    // Unirest
    implementation 'com.mashape.unirest:unirest-java:1.3.1'

    // Jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'

    // Markdown
    implementation 'org.commonmark:commonmark:0.21.0'
    implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'

    // HTML to Text
    implementation 'org.jsoup:jsoup:1.15.4'

    implementation 'org.unbroken-dome.base62:base62:1.1.0'

//    implementation 'org.bytedeco:javacpp:1.7.6' // Use the latest version
//    implementation 'org.bytedeco.javacpp-presets:webp:1.1.6'

    implementation 'com.twelvemonkeys.imageio:imageio-webp:3.9.4'

    // Katex
//    implementation 'io.github.katexjava:katex-java:0.5.0'
    implementation 'org.codehaus.mojo:latex-maven-plugin:1.1'
//    implementation 'com.github.mikaelstaldal:jlatexmath:1.0.10'
//    implementation 'org.scilab.forge:texworks-core:1.0'
    implementation 'org.scilab.forge:jlatexmath:1.0.7'
//    implementation 'com.googlecode.jlatexmath:jlatexmath:1.0.7'
    implementation 'com.nfbsoftware:latex-converter:1.0.1'
//    implementation 'io.github.egormkn:latexview:0.6.1'

    implementation "com.sandec:mdfx:0.2.12"

    // implementation 'org.xerial:sqlite-jdbc:3.36.0.1'

    // Webcam Library
    implementation 'com.github.sarxos:webcam-capture:0.3.12'


    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"

}

test {
    useJUnitPlatform()
}